*2.3.5 (November 25, 2009)*

* Minor Bug Fixes and deprecation warnings

* Fixes for the Nokogiri backend for XmlMini

* Ruby 1.9 Compatibility

*2.3.4 (September 4, 2009)*

* Introduce ActiveSupport::Multibyte.clean to clean invalid multibyte strings.

* Bug fixes

*2.3.3 (July 12, 2009)*

* JSON: +Object#to_json+ calls +as_json+ to coerce itself into something natively encodable like +Hash+, +Integer+, or +String+. Override +as_json+ instead of +to_json+ so you're JSON-library-agnostic.  [Jeremy Kemper]

* Allow MemCacheStore to be initialized with a MemCache-like object instead of addresses and options [Bryan Helmkamp]


*2.3.2 [Final] (March 15, 2009)*

* XmlMini supports LibXML and Nokogiri backends.  #2084, #2190 [Bart ten Brinke, Aaron Patterson]
    Example: XmlMini.backend = 'Nokogiri'

* Vendorize i18n 0.1.3 gem (fixes issues with incompatible character encodings in Ruby 1.9) #2038 [Akira Matsuda]

* Update bundled memcache-client from 1.5.0.5 to 1.6.4.99. See http://www.mikeperham.com/2009/02/15/memcache-client-performance/  [Mike Perham]

* Ruby 1.9.1p0 fix: URI.unescape can decode multibyte chars.  #2033 [MOROHASHI Kyosuke]

* Time#to_s(:rfc822) uses #formatted_offset instead of unreliable and non-standard %z directive #1899 [Zachary Zolton]

* Make TimeWithZone#to_formatted_s an alias to TimeWithZone#to_s #1796 [Levin Alexander]

* Introduce Array.wrap(foo) to wrap the argument in an array unless it's already an array. Wraps nil as an empty array. Use instead of Array(foo) and foo.to_a since they treat String as Enumerable.  [Jeremy Kemper]

* TimeWithZone#xmlschema accepts optional fraction_digits argument [#1725 state:resolved] [Nicholas Dainty]

* Object#tap shim for Ruby < 1.8.7. Similar to Object#returning, tap yields self then returns self.  [Jeremy Kemper]
    array.select { ... }.tap(&:inspect).map { ... }

* TimeWithZone#- gives correct result with wrapped DateTime, and with DateTime argument [Geoff Buesing]
